--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body {
     text-align: center;
   }
   
+
+  
   .hero {
     position: relative;
     background-image: url("../images/bg3.jpg");
@@ -22,7 +24,7 @@ body {
     background-position: center;
     opacity: 0.7;
     text-align: center;
-    min-height: 500px;
+    height: 700px;
 }
 
   
